[project]
name = "vmcore-analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.8.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.5",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "pyppeteer>=2.0.0",
    "watchdog>=6.0.0",
    "pyyaml>=6.0.1",
    "langchain-mcp-adapters>=0.2.1",
    "fastmcp>=2.12.5",
    "distro>=1.9.0",
    "aiofiles>=25.1.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "httpx>=0.28.1",
    "langchain-deepseek>=1.0.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
