[project]
name = "simple-agent-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.0",
    "langchain-core>=1.2.2",
    "langchain-openai>=1.1.4",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.10",
]
